made the nav non-fixed due to word-wrap shenanigans
In the index.html, I added a login component to the nav bar because of
reasons. I also added a ui-view to the body to render signup.html

--- a/notesApp/scss/app.scss
+++ b/notesApp/scss/app.scss
@@ -49,10 +49,7 @@ $main-colour: #0b3454;
     background-color: $main-colour;
     color: white;
     padding: 10px 10px 10px 10px;
-    z-index: 100;
-    position: fixed;
     word-wrap: break-word;
-    width: 100%;
 }
 
 .body {
